# qulab-dev

./: .gitignore  PROJECT_BLUEPRINT.md  README.md  idea(concrete).md  idea.md  pyproject.toml
analysis_modules/: README.md  __init__.py  two_trace_ratio.py
docs/: ADAPTER_REQUIREMENTS.md  ARCHITECTURE.md  BENCH_TEST_CONFIGS.md  CONFIG_SCHEMA.md  DATA_MODEL.md  DATA_VIEWER_REQUIREMENTS.md  EXPERIMENT_AUTHORING_DIAGNOSTICS_REPLAY_PLAN.md  EXPERIMENT_BENCH_BRINGUP_GUIDE.md  HARDWARE_SYNC.md  IMPLEMENTATION_ORDER.md  LIVE_COMPUTE_DERIVED_DATA_PLAN.md  LIVE_VIEW.md  NAMING_AND_GIT.md  OPERATOR_UI.md  P10_6_LIVE_VIEW_HANDOFF.md  P11_3C_GUI_HANDOFF.md  P11_AUTHORING_DIAGNOSTICS_HISTORY.md  PARAMETERIZED_EXPERIMENT_ARCHITECTURE_PLAN.md  PLANNER_HANDOFF_TEMP_2026-06-28.md  SEQUENCE_FAMILY_GENERATOR_PHASE_E_PLAN.md  SEQUENCE_LIVE_COMPUTE_GUI_INTEGRATION_PLAN.md
drivers/: README.md
examples/: generate_rabi_sequence_bundle.py
prompts/: 001_core_foundation_worker.md  002_followup_dual_csv_zarr_storage_backend.md  002_storage_runstore_worker.md  003_config_instrument_sync_worker.md  004_followup_gui_p8_1_asg_sequence_bridge.md  004_followup_gui_p8_2_operator_parameters.md  004_followup_gui_p8_3_direct_control_PENDING.md  004_followup_gui_viewer_dual_csv_zarr_backend.md  004_gui_operator_console_worker.md  004_updated_pyqt_operator_workflow_worker.md  005_pycontrol_hardware_adapter_worker.md  006_bench_commissioning_worker.md  007_advanced_ni_sync_driver_worker.md  008_advanced_storage_and_viewer_worker.md  008_followup_dual_csv_zarr_advanced_storage_viewer.md  (+18 more)
(+298 files in other folders)
